src/objects/SPE_PIDefinition__c.object
<CustomObject>
    <customHelpPage>SPE_PI_Definition_Help_Page</customHelpPage>
    <fields>
        <fullName>Additional_Days__c</fullName>
        <description>Additional days for PI upload due date</description>
        <label>Additional Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Days_for_week__c</fullName>
        <label>Additional Days for week</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BUScope__c</fullName>
        <label>Product Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Business Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Line</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Products</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BaseURL__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <inlineHelpText>Relevant org/group for this data</inlineHelpText>
        <label>Organization/Group</label>
        <picklist>
            <picklistValues>
                <fullName>INDIRECT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRODUCT PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SERVICES PROCUREMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PARTNERING ORGANIZATION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOBILE BROADBAND</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CategoryScope__c</fullName>
        <label>Category scope</label>
        <picklist>
            <picklistValues>
                <fullName>Category Area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Categories</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>255 Character Limit</inlineHelpText>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataAcquisitionMethod__c</fullName>
        <inlineHelpText>Identify how this data is acquired</inlineHelpText>
        <label>Data Acquisition Method</label>
        <picklist>
            <picklistValues>
                <fullName>Data Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone Survey</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Day_name_of_upload_week__c</fullName>
        <description>Set a day of any week for PI upload</description>
        <label>Day name of upload week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DaysInactive__c</fullName>
        <formula>Now()-  LastPIImportDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Till this date PI upload will recur.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <description>Frequency with which the data is generally refreshed. Same as due date</description>
        <inlineHelpText>Specifies how often the data is posted or updated, i.e. monthly, annually, etc.</inlineHelpText>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoScope__c</fullName>
        <label>Geography Scope</label>
        <picklist>
            <picklistValues>
                <fullName>All Markets</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastPIImportDate__c</fullName>
        <label>Last PI Import Date</label>
        <summarizedField>SPE_PIValues__c.CreatedDate</summarizedField>
        <summaryForeignKey>SPE_PIValues__c.PIDefination__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LifecycleStage__c</fullName>
        <inlineHelpText>PI can not be used until Published</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Question_Score__c</fullName>
        <formula>SurveyQuestion__r.MaxScore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Question Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Upload_Day__c</fullName>
        <label>Month Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_Value__c</fullName>
        <label>Month Value</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OperationalType__c</fullName>
        <label>Operational Type</label>
        <picklist>
            <picklistValues>
                <fullName>Lagging KPI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leading KPI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PIAbbreviation__c</fullName>
        <inlineHelpText>10 Character Limit</inlineHelpText>
        <label>PI Abbreviation</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PICode__c</fullName>
        <displayFormat>PI-{0000}</displayFormat>
        <label>PI Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PITitle__c</fullName>
        <inlineHelpText>80 Character Limit, Concise Description of PI</inlineHelpText>
        <label>SYS PI  Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIUploadDuedate__c</fullName>
        <label>PI Upload Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PI_Title__c</fullName>
        <description>This field will be replaced with Standard Name field of PI 
(Standard Name field of PI is now auto number.)</description>
        <encrypted>true</encrypted>
        <label>PI Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_Upload_Due_date__c</fullName>
        <label>PI Upload Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PriorValue_Last_PI_Import_Date__c</fullName>
        <description>This is use for internal purpose only.</description>
        <label>PriorValue Last PI Import Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PurposeAndObjective__c</fullName>
        <inlineHelpText>250 Character Limit, provide additional details on this PI</inlineHelpText>
        <label>Purpose and Objective</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recurrence_Pattern__c</fullName>
        <description>This field holds the data for monthly/yearly child radio options to check which option is chosen.</description>
        <label>Recurrence Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>DayPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DayPerYear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerYear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_frequency_type__c</fullName>
        <description>Used in selection page of PI upload recurrence. It has two values- Monthly and Yearly.</description>
        <label>Recurrence frequency type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SourceDataOwner__c</fullName>
        <description>Name of the person who supplies the data</description>
        <inlineHelpText>Source of Input Data (80 Character Limit)</inlineHelpText>
        <label>Source Data</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SurveyQuestion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Required if Data Acquisition Method = Survey</inlineHelpText>
        <label>Question ID</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>PI Data</relationshipLabel>
        <relationshipName>PI_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Specify domain of this PI</inlineHelpText>
        <label>PI Domain</label>
        <picklist>
            <picklistValues>
                <fullName>Operational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UoM__c</fullName>
        <encrypted>true</encrypted>
        <inlineHelpText>i.e. Days, Units, %, Euros, etc.</inlineHelpText>
        <label>Unit of Measure</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Day__c</fullName>
        <description>PI upload day of any month.</description>
        <label>Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ValuesType__c</fullName>
        <description>To describe PI values data type</description>
        <inlineHelpText>Specify type of data values for this PI</inlineHelpText>
        <label>Values Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Count__c</fullName>
        <description>It holds week of any month</description>
        <label>Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Day_Name_of_Upload_Week__c</fullName>
        <label>Yearly Day Name of Upload Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Week_Count__c</fullName>
        <description>This field is used for Yearly Recurrence pattern.</description>
        <label>Yearly Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PI Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PI_Title__c</columns>
        <columns>PIAbbreviation__c</columns>
        <columns>LifecycleStage__c</columns>
        <columns>DataAcquisitionMethod__c</columns>
        <columns>Frequency__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UoM__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>PI Data Sequential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PI Data</pluralLabel>
    <recordTypes>
        <fullName>Draft_and_Pilot</fullName>
        <active>true</active>
        <label>Draft and Pilot</label>
    </recordTypes>
    <recordTypes>
        <fullName>Obsolete</fullName>
        <active>true</active>
        <label>Obsolete</label>
    </recordTypes>
    <recordTypes>
        <fullName>Published</fullName>
        <active>true</active>
        <label>Published</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE_Frequency</fullName>
        <active>true</active>
        <description>This rule puts a check on the Frequency for Survey PIs</description>
        <errorConditionFormula>AND(ISPICKVAL(DataAcquisitionMethod__c, &apos;Survey&apos;), NOT(ISPICKVAL(Frequency__c,&apos;0&apos;)))</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>For Survey PIs, Frequency can not be set to any values other than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_PIDueDateRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(DataAcquisitionMethod__c,&apos;Data Load&apos;)&amp;&amp; ISBLANK( PIUploadDuedate__c )</errorConditionFormula>
        <errorDisplayField>PIUploadDuedate__c</errorDisplayField>
        <errorMessage>Enter PI Upload Due date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_PIUploadDueDate_Blank</fullName>
        <active>true</active>
        <description>For survey based PI, the upload due date should be blank</description>
        <errorConditionFormula>ISPICKVAL(DataAcquisitionMethod__c,&apos;Survey&apos;)&amp;&amp; NOT(ISBLANK( PIUploadDuedate__c ))</errorConditionFormula>
        <errorDisplayField>PIUploadDuedate__c</errorDisplayField>
        <errorMessage>For Survey based PI, PI Upload due date should be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_PIdatatypeNumberifmultiselectchoice</fullName>
        <active>true</active>
        <description>If the attached question answer is multiselect choice option then PI data type must be Number.</description>
        <errorConditionFormula>ISPICKVAL(SurveyQuestion__r.AnswerType__c,&apos;Picklist&apos;) &amp;&amp; NOT(ISPICKVAL(ValuesType__c,&apos;Number&apos;))</errorConditionFormula>
        <errorDisplayField>ValuesType__c</errorDisplayField>
        <errorMessage>Question answer is multiselect choice option then PI data type must be Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_QuestionIDRequiredForSurveyBased</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(SurveyQuestion__c) &amp;&amp; (ISPICKVAL(DataAcquisitionMethod__c,&apos;Survey&apos;) || ISPICKVAL(DataAcquisitionMethod__c,&apos;Standalone Survey&apos;))</errorConditionFormula>
        <errorDisplayField>SurveyQuestion__c</errorDisplayField>
        <errorMessage>For Survey / Standalone Survey Based Data Acquisition Method, Question ID can not be kept blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Question_ID</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(DataAcquisitionMethod__c,&apos;Data Load&apos;)&amp;&amp; NOT(ISBLANK( SurveyQuestion__c))</errorConditionFormula>
        <errorDisplayField>SurveyQuestion__c</errorDisplayField>
        <errorMessage>If Data Acquisition Method is Data load then Question ID must be blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_StageValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(PRIORVALUE(LifecycleStage__c),&quot;Obsolete&quot;),OR( ISPICKVAL(LifecycleStage__c,&quot;Published&quot;),ISPICKVAL(LifecycleStage__c,&quot;Draft&quot;)))</errorConditionFormula>
        <errorMessage>The Life-cycle stage must be Draft before converted to published</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_StatusRestriction</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISNEW(), OR(ISPICKVAL(LifecycleStage__c,&quot;Published&quot;), 
ISPICKVAL(LifecycleStage__c,&quot;Obsolete&quot;) ))</errorConditionFormula>
        <errorDisplayField>LifecycleStage__c</errorDisplayField>
        <errorMessage>Lifecycle Stage must be Draft</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_Upload_Due_Date_cannot_exceed_25th</fullName>
        <active>false</active>
        <description>Upload due date field should not exceed 25th of a month</description>
        <errorConditionFormula>DAY(PIUploadDuedate__c)&gt;25</errorConditionFormula>
        <errorDisplayField>PIUploadDuedate__c</errorDisplayField>
        <errorMessage>PI Upload Due date cannot exceed 25th.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Name should be start with Alphanumeric only</description>
        <errorConditionFormula>NOT(REGEX(PI_Title__c, &quot;[a-zA-Z 0-9]{1}.*&quot;))</errorConditionFormula>
        <errorDisplayField>CategoryScope__c</errorDisplayField>
        <errorMessage>Name should be start with Alphanumeric only</errorMessage>
    </validationRules>
</CustomObject>